align left menu and fixing some names

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -34,3 +34,13 @@ h3 {
   width: 960px;
   margin: 0 auto;
 }
+
+nav .main-menu:after{
+  content: '';
+  clear: left;
+  display: block;
+}
+
+nav .main-menu li {
+  float: left;
+}
